# freeipa-mcp-py

./: README.md  TESTING.md  ipaclient.py  pyproject.toml  pytest.ini
.agents/skills/conventional-commits/: SKILL.md
.github/workflows/: format.yml  linter.yml  release.yml  shellcheck.yml  test.yml  type.yml
contrib/: ci.sh
docs/: VAULT.md
docs/design/: 02-freeipa-mcp-server.md
freeipa_mcp/: ipaclient.py  vault_cache.py  vault_crypto.py
freeipa_mcp/tools/: __init__.py  _vault_dialog.py  _vault_display_dialog.py  _vault_password_dialog.py  common.py  dynamic.py  vault.py
tests/: conftest.py  test_help_markdown.py  test_ipaclient.py  test_ipaclient_integration.py  test_mcp_common.py  test_mcp_dynamic.py  test_mcp_integration.py  test_mcp_server.py  test_vault_cache.py  test_vault_crypto.py
