[build-system]
requires = ["setuptools>=45", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "freeipa-mcp"
version = "0.1.0"
description = "Minimal IPA Client for MCP integration"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.25.0",
    "requests-gssapi>=1.2.0",
    "mcp>=1.0.0",
    "paramiko>=3.0.0",
]

[project.scripts]
freeipa-mcp = "freeipa_mcp.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.15.10",
    "ty>=0.0.29",
]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "responses>=0.20.0",
]
gui = [
    "PyGObject>=3.42.0",
]

[tool.setuptools]
py-modules = ["ipaclient"]

[tool.setuptools.packages.find]
where = ["."]
include = ["freeipa_mcp*"]

[tool.setuptools_scm]
fallback_version = "0.1.0"

[tool.ruff]
# PEP8-compliant configuration
line-length = 88
target-version = "py310"

[tool.ruff.lint]
# Enable PEP8 rules
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
]

[[tool.ty.overrides]]
include = ["tests/**"]

[tool.ty.overrides.rules]
unresolved-import = "ignore"

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: marks tests as integration tests requiring live server (deselect with '-m \"not integration\"')",
]
# Default: skip integration tests unless explicitly requested
addopts = "-m 'not integration'"
